Add choice to pick up or deliver repaired product

--- a/forms/repairing_form.html
+++ b/forms/repairing_form.html
@@ -101,11 +101,15 @@
                     <tr>
                         <td>
                             <input type="radio" id="productNoDeliver" name="productDeliver" value="noDelivery">
-                            <label for="productDeliver">ลูกค้านำมา</label>
+                            <label for="productDeliver">ลูกค้านำมา-รับกลับ</label>
                         </td>
                         <td>
                             <input type="radio" id="productPickUp" name="productDeliver" value="onlyPickUp">
                             <label for="productDeliver">รับจากบ้านของลูกค้า</label>
+                        </td>
+                        <td>
+                            <input type="radio" id="productDeliver" name="productDeliver" value="onlyDelivery">
+                            <label for="productDeliver">จัดส่งบ้านของลูกค้า</label>
                         </td>
                         <td>
                             <input type="radio" id="productBothDeliver" name="productDeliver" value="pickUpAndDelivery">
