--- a/view_pages/repairing_view.html
+++ b/view_pages/repairing_view.html
@@ -106,59 +106,67 @@
                 <table>
                     <tr>
                         <td>
-                            <input type="radio" id="productDeliver" name="productDeliver" value="noDelivery">
-                            <label for="productDeliver">ลูกค้านำมา</label>
+                            <input type="radio" id="productNoDeliver" name="productDeliver" value="noDelivery">
+                            <label for="productDeliver">ลูกค้านำมา-รับกลับ</label>
                         </td>
                         <td>
-                            <input type="radio" id="productDeliver" name="productDeliver" value="onlyPickUp">
+                            <input type="radio" id="productPickUp" name="productDeliver" value="onlyPickUp">
                             <label for="productDeliver">รับจากบ้านของลูกค้า</label>
                         </td>
                         <td>
-                            <input type="radio" id="productDeliver" name="productDeliver" value="pickUpAndDelivery">
+                            <input type="radio" id="productDeliver" name="productDeliver" value="onlyDelivery">
+                            <label for="productDeliver">จัดส่งบ้านของลูกค้า</label>
+                        </td>
+                        <td>
+                            <input type="radio" id="productBothDeliver" name="productDeliver" value="pickUpAndDelivery">
                             <label for="productDeliver">รับ-จัดส่งเครื่อง</label>
                         </td>
                     </tr>
-                    <!-- enable if need pick up -->
-                    <tr>
-                        <td>วันที่-เวลา การนัดหมาย</td>
-                        <td>
-                            <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
-                        </td>
-                        <td>วันที่-เวลา การนัดหมาย</td>
-                        <td>
-                            <input type="datetime" id="appointmentDate" name="appointmentDate" readonly>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <span>พนักงานรับเครื่อง</span>
-                        </td>
-                        <td colspan="2">
-                            <span>พนักงานจัดส่งเครื่อง</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>รหัสพนักงาน</td>
-                        <td>
-                            <input type="number" id="staffID" name="staffID" readonly>
-                        </td>
-                        <td>รหัสพนักงาน</td>
-                        <td>
-                            <input type="number" id="staffID" name="staffID" readonly>
-                        </td>
-                    </tr>
-                    <tr>
-                        <!-- display only -->
-                        <td>ชื่อพนักงาน</td>
-                        <td>
-                            <input type="text" id="staffName" name="staffName" readonly>
-                        </td>
-                        <td>ชื่อพนักงาน</td>
-                        <td>
-                            <input type="text" id="staffName" name="staffName" readonly>
-                        </td>
-                    </tr>
                 </table>
+                <!-- enable if need pick up -->
+                <div id="delivery">
+                    <table>
+                        <tr>
+                            <td colspan="2">
+                                <span>รับเครื่อง</span>
+                            </td>
+                            <td colspan="2">
+                                <span>จัดส่งเครื่อง</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>วันที่-เวลา การนัดหมาย</td>
+                            <td>
+                                <input type="datetime" id="appointmentDatePickUp" name="appointmentDate">
+                            </td>
+                            <td>วันที่-เวลา การนัดหมาย</td>
+                            <td>
+                                <input type="datetime" id="appointmentDateDelivery" name="appointmentDate">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>รหัสพนักงาน</td>
+                            <td>
+                                <input type="number" id="staffID2" name="staffID2">
+                            </td>
+                            <td>รหัสพนักงาน</td>
+                            <td>
+                                <input type="number" id="staffID3" name="staffID3">
+                            </td>
+                        </tr>
+                        <tr>
+                            <!-- display only -->
+                            <td>ชื่อพนักงาน</td>
+                            <td>
+                                <input type="text" id="staffName2" name="staffName2" readonly>
+                            </td>
+                            <td>ชื่อพนักงาน</td>
+                            <td>
+                                <input type="text" id="staffName3" name="staffName3" readonly>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
         <div class="row">
