change address auto-fill library to thai-data

--- a/forms/staff_form.html
+++ b/forms/staff_form.html
@@ -51,16 +51,22 @@
                             <table>
                                 <tr>
                                     <td>
-                                        <input id="input_zipcode" class="zipcode-field" placeholder="รหัสไปรษณีย์" />
+                                        <input id="input_zipcode" class="zipcode-field" placeholder="รหัสไปรษณีย์"/>  
                                     </td>
                                     <td>
-                                        <input class="dropdown-field" id="input_province" placeholder="จังหวัด" />
+                                        <select class="dropdown-field" id="input_province">
+                                            <option value="" disabled selected>จังหวัด</option>
+                                        </select>
                                     </td>
                                     <td>
-                                        <input class="dropdown-field" id="input_amphoe" placeholder="อำเภอ/เขต" />
+                                        <select class="dropdown-field" id="input_amphoe">
+                                            <option value="" disabled selected>อำเภอ/เขต</option>
+                                        </select>
                                     </td>
                                     <td>
-                                        <input class="dropdown-field" id="input_district" placeholder="ตำบล/แขวง" />
+                                        <select class="dropdown-field" id="input_district">
+                                            <option value="" disabled selected>ตำบล/แขวง</option>
+                                        </select>
                                     </td>
                                 </tr>
                             </table>
