Add necessary fields to form ralet to database

--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -27,6 +27,15 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>ยี่ห้อ</td>
+                        <td>
+                            <select id="productBrand" class="dropdown-field-short" name="productBrand">
+                                <option value="Brand">Product Brand</option>
+                                <!-- data from brand table -->
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
                         <!-- enable for general person -->
                         <td>ชื่อ</td>
                         <td>
