--- a/forms/staff_form.html
+++ b/forms/staff_form.html
@@ -17,6 +17,16 @@
                             <!-- auto generate -->
                             <input type="number" id="staffID" name="staffID" readonly>
                         </td>
+                        <td>สาขา</td>
+                        <td>
+                            <input type="number" id="staffBranch" name="staffBranch">
+                        </td>
+                        <!-- <td>
+                            <select id="productBrand" class="dropdown-field" name="productBrand">
+                                <option value="1">บ้านนา</option>
+                                <option value="2">พนมสารคาม</option>
+                            </select>
+                        </td> -->
                     </tr>
                     <tr>
                         <td>ชื่อ</td>
