creating update or insert query and elementValueCompactor then implement to delivery form submition

--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -210,7 +210,7 @@
                             <th>ชื่ออุปกรณ์</th>
                             <th>จำนวน</th>
                         </tr>
-                        <tr>
+                        <tr id="equipTable">
                             <td>
                                 <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                             </td>
