--- a/view_pages/delivery_view.html
+++ b/view_pages/delivery_view.html
@@ -210,7 +210,7 @@
                             <th>ชื่ออุปกรณ์</th>
                             <th>จำนวน</th>
                         </tr>
-                        <tr>
+                        <tr id="equipTable">
                             <td>
                                 <input type="number" class="table-field" id="equipmentID" name="equipmentID">
                             </td>
