--- a/launcher/login.html
+++ b/launcher/login.html
@@ -2,12 +2,12 @@
 
 <head>
   <title>Seutrong Service</title>
-  <link rel="stylesheet" href="styles/login.css">
+  <link rel="stylesheet" href="../src/styles/login.css">
 </head>
 
 <body>
   <div class="login">
-    <img src="images/LOGO.jpg">
+    <img src="../src/images/LOGO.jpg">
     <form id="loginForm">
       <input type="text" placeholder="Username" id="username">
       <input type="password" placeholder="Password" id="password">
