--- a/launcher/home.html
+++ b/launcher/home.html
@@ -14,12 +14,12 @@
             <div class="profile">
                 <button class="profile-btn">
                     <i class="fa fa-fw fa-user"></i>
-                    <span id="staffName">
+                    <span id="userName">
                         Staff Name
                     </span>
                     <span> | </span>
-                    <span id="staffPosition">
-                        Position
+                    <span id="userBranch">
+                        Branch
                     </span>
                 </button>
 
